  it contains some subtle and not-so-subtle errors in its calculations.
- Fixed a problem when looking at dummy items (e.g. buttons and doors).
- addr_server.exe win32 binary removed, due to bugginess. Since
  it hasn't been working for a while, and it was only noticed by
  a bugtester, it's going away until post-2.1
- Fixed color code problem in the arch room screen.

---- 2.0r29 --- 
- Fixed finger daemon to not display ip addresses to players.
- The verb copy now handles relative paths more gracefully.
- LIB_TEACHER can now know all languages with SetAllLanguages(1)
- Standard chairs and beds can no longer be taken when someone is using them.
- Fixed church elevator buttons.
- Fixed problem with "look at pile".
- Fixed problem with examining objects on surfaces.
- It is now also possible to look at things carried by others, 
  e.g. "look at shirt on fighter".
- Remote finger no longer betrays invisible people.
- Added sefun: alpha_strip
- Room descriptions now indicate which piece of furniture a creature
  is resting on, if applicable.
- Objects on surfaces than can be sat or lain in are not visible
  or accessible if someone is lying or sitting on that surface. e.g.,
  you can't examine or get the glasses under your butt on the chair.
- SetMaxHealthPoints now works as one would expect. The kitchen rat
  is invincible no more.
- Look at <container> problem fixed.
- Bank tellers (Zoe) now do a better job of retaining the correct
  surcharge on currency withdrawals.
- Added /secure/obj/glasses.c as a creation object. Since you wear them,
  it's hard to lose them accidentally. Since few things are called "glasses",
  they won't get in the way of creating objects. New creators will have them
  automatically added to the table in their sample room.
- One may now have a smiley in front of a channel message without
  it turning into an emote.
- Fixed a conflict in the parsing system.
- Verbified "force".