@@ -3,12 +3,11 @@
 
 inherit LIB_ROOM;
 
-
 void create() {
     room::create();
     SetAmbientLight(30);
-    SetShort("a blank room");
-    SetLong("A featureless area.");
+    SetShort("The Empty Cave");
+    SetLong("An empty cave.");
     SetExits( ([
 	"south" : "/domains/town/virtual/forest/24,25" ,
 	"out" : "/domains/town/virtual/forest/24,25" ,
