@@ -18,8 +18,21 @@ Dead Souls News
 Page</big></big></big><br>
 </div>
 <hr style="width: 100%; height: 2px;">
-<div style="text-align: left;"><a name="10jul06"></a><span
- style="font-weight: bold;">10 July 06</span><br>
+<div style="text-align: left;"><a name="11jul06"></a><span
+ style="font-weight: bold;">11 July 06</span><br>
+<br>
+&nbsp;&nbsp;&nbsp; I've disposed of all the items in the todo<br>
+list of July 7. There is nothing wrong with<br>
+the stargate. The example file has been renamed<br>
+to avoid confusion, and to avoid it accidentally<br>
+going live on the stargate network.<br>
+<br>
+&nbsp;&nbsp;&nbsp; I've killed the bugs found by the playtesters<br>
+in the past few days, and unless something major<br>
+happens, Dead Souls 2.1 will be released this week.<br>
+<br>
+<br>
+<a name="10jul06"></a><span style="font-weight: bold;">10 July 06</span><br>
 <br>
 &nbsp;&nbsp;&nbsp; Things are going just great. At this point,<br>
 the number and type of bug report coming in is<br>
